--- a/app/sass/_aside.scss
+++ b/app/sass/_aside.scss
@@ -50,7 +50,16 @@
 		
 	}
 }
-
+.no-cssgradients .nav-item{
+	background: #f2efef;
+	border-bottom: 1px solid #d2d2d2;
+	&.active{
+		background: #54c8ab;
+	}
+	&:hover{
+		background: #e3e1e1;
+	}
+}
 .contacts-list{
 	@extend .nav-list;
 	background: #fbf9f9;
@@ -65,6 +74,11 @@
 	box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.17),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.25);
 	color: #d0982c;
 }
+.no-cssgradients .contacts-item-name{
+	background: #eac171;
+	border-bottom: 1px solid #d6d5d3;
+
+}
 .contacts-item{
 	@include clearfix();
 	padding: 0 0 0 48px;
@@ -76,8 +90,6 @@
 	border-right: 1px solid rgb(214, 213, 211);
 	position: relative;
 	line-height: 38px;
-
-
 	&:hover{
 		transition: background linear .2s, color linear .2s;
 		background-image: linear-gradient(to bottom, rgba(251,249,249,0) 0%, rgba(224,196,145,0.45) 100%);
@@ -106,4 +118,11 @@
 		}
 	}
 
+}
+.no-cssgradients .contacts-item{
+	background: #f9f8f8;
+	border-bottom: 1px solid #d6d5d3;
+	&:hover{
+		background: #f9f4ea;
+	}
 }
