--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -13,7 +13,7 @@ ul{
 	padding:0;
 	margin: 0;
 }
-h1{
+.section-title{
 	box-sizing: border-box;
 	margin: 0;
 	font-size: 24px;
@@ -30,4 +30,7 @@ h1{
 }
 p{
 	margin: 0 0 7px 0;
+}
+.no-cssgradients .section-title{
+	background: #8f8c8c;
 }
