Add links to the logo. Fixing the bug in progects.html

--- a/app/css/projects.css
+++ b/app/css/projects.css
@@ -344,7 +344,8 @@ body {
   font-family: "OpenSans-Bold"; }
 
 .project {
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  min-width: 565px; }
   .project:before, .project:after {
     content: "";
     display: table; }
