--- a/app/css/callback.css
+++ b/app/css/callback.css
@@ -47,8 +47,9 @@ ul {
   border-right: 1px solid #6a6a6a;
   border-top: 1px solid #9c9c9c; }
 
-p {
-  margin: 0 0 7px 0; }
+label {
+  margin: 0 0 7px 0;
+  display: block; }
 
 .no-cssgradients .section-title {
   background: #8f8c8c; }
@@ -347,7 +348,7 @@ body {
   padding-top: 27px; }
 
 .callback {
-  min-height: 734px; }
+  width: 406px; }
   .callback:before, .callback:after {
     content: "";
     display: table; }
@@ -420,7 +421,7 @@ body {
   padding: 6px 10px; }
 
 .callback-button {
-  padding: 10px 25px;
+  padding: 10px 23px;
   color: #727070;
   border: 1px solid #c5c5c5;
   border-radius: 5px;
