--- a/app/sass/_main-callback.scss
+++ b/app/sass/_main-callback.scss
@@ -3,7 +3,7 @@
 }
 .callback{
 	@include clearfix();
-	min-height: 734px;
+	width: 406px;
 }
 .callback-item{
 	font-family: "OpenSans-Light";
@@ -56,7 +56,7 @@
 	padding: 6px 10px;
 }
 .callback-button{
-	padding: 10px 25px;	
+	padding: 10px 23px;	
 	color: rgb(114, 112, 112);
 	border: 1px solid #c5c5c5;
 	border-radius: 5px;
