--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -28,8 +28,9 @@ ul{
 	border-right: 1px solid #6a6a6a;
 	border-top: 1px solid #9c9c9c;
 }
-p{
+label{
 	margin: 0 0 7px 0;
+	display: block;
 }
 .no-cssgradients .section-title{
 	background: #8f8c8c;
