--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -17,9 +17,9 @@ ul{
 	box-sizing: border-box;
 	margin: 0;
 	font-size: 24px;
-	line-height: 55px;
+	line-height: 25px;
 	color: $colorH1;
-	padding: 0 0 0 42px;
+	padding: 14px 0 14px 42px;
 	text-shadow: 0px 1px 0px rgba(102, 101, 101, 0.004);
 	box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.3);
 	background-image: linear-gradient(to top, rgb(123,120,120) 0%, rgb(169,168,168) 100%);
