--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -6,6 +6,7 @@
 	box-shadow: 0px -1px 0px 0px rgba(0, 0, 0, 0.1);
 	color: #727070;
 	font-size: 12px;
+	overflow: hidden;
 }
 .no-cssgradients .footer{
 	background: #f7f7f7;
@@ -13,13 +14,13 @@
 
 .copyright{
 	float: left;
-	line-height: $footer;
+	padding: 21px 0;
 	font-family: "OpenSans-Light";
+	max-width: 495px;
 }
 .login{
 	width: 125px;
 	float: left;
-	line-height: $footer;
 }
 .sprite-locked{
 	width: 24px;
@@ -35,6 +36,6 @@
 
 .log{
 	float: left;
-	padding: 0 0 0 10px;
+	padding: 21px 0;
 	font-family: "OpenSans-Bold";
 }
