--- a/app/css/callback.css
+++ b/app/css/callback.css
@@ -187,14 +187,14 @@ body {
     text-indent: -65px; }
 
 .social-icon-vk {
-  background-position: -270px -191px; }
+  background-position: -54px -213px; }
   .social-icon-vk:hover {
-    background-position: -10px -255px; }
+    background-position: -208px -213px; }
 
 .social-icon-tw {
   background-position: -250px -85px; }
   .social-icon-tw:hover {
-    background-position: -208px -149px; }
+    background-position: -249px -149px; }
 
 .social-icon-gh {
   background-position: -10px -149px; }
@@ -300,14 +300,15 @@ body {
     left: 18px;
     top: 50%;
     margin-top: -10px; }
-  .contacts-item a {
-    text-decoration: none;
-    color: #727070;
-    padding: 0 5px 0 40px; }
-    .contacts-item a.email {
-      text-decoration: underline; }
   .contacts-item:last-child {
     border-radius: 0 0 5px 5px; }
+
+.icon-link {
+  text-decoration: none;
+  color: #727070;
+  padding: 0 5px 0 40px; }
+  .icon-link.email {
+    text-decoration: underline; }
 
 .contacts-icon {
   background-image: url(../img/sprit.png);
@@ -323,7 +324,7 @@ body {
     margin: -9px 0 0 30px; }
 
 .contacts-icon-email {
-  background-position: -114px -5px; }
+  background-position: -114px -10px; }
 
 .contacts-icon-phone {
   background-position: -50px -85px; }
@@ -365,11 +366,11 @@ body {
   width: 24px;
   height: 22px;
   background-image: url(../img/sprit.png);
-  background-position: -214px -11px;
+  background-position: -213px -10px;
   margin-top: 19px;
   float: left; }
   .sprite-locked:hover {
-    background-position: -270px -150px; }
+    background-position: -10px -213px; }
 
 .log {
   float: left;
