--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -22,20 +22,28 @@
 	width: 125px;
 	float: left;
 }
-.sprite-locked{
+.locked-wrap{
+	@include clearfix();
+	display: inline-block;
+	&:hover .locked{
+		background-position: -10px -213px;
+	}
+}
+.locked{
 	width: 24px;
 	height: 22px;
 	background-image: url(../img/sprit.png);
 	background-position: -213px -10px;
 	margin-top: 19px;
 	float: left;
-	&:hover{
-		background-position: -10px -213px;
-	}
 }
-
 .log{
 	float: left;
-	padding: 21px 0;
+	padding: 21px 5px;
 	font-family: "OpenSans-Bold";
+	text-decoration: none;
+	color: $color;
+	&:hover .sprite-locked{
+		background-position: -10px -213px;
+	}
 }
