edit gulpfile and adding a mainie in dist

--- a/app/css/about.css
+++ b/app/css/about.css
@@ -275,7 +275,7 @@ body {
   color: #d0982c;
   border-radius: 5px 5px 0 0; }
 
-.no-cssgradients .contacts-item-name {
+.no-cssgradients .contacts-name {
   background: #eac171;
   border-bottom: 1px solid #d6d5d3; }
 
