--- a/app/css/projects.css
+++ b/app/css/projects.css
@@ -275,7 +275,7 @@ body {
   color: #d0982c;
   border-radius: 5px 5px 0 0; }
 
-.no-cssgradients .contacts-item-name {
+.no-cssgradients .contacts-name {
   background: #eac171;
   border-bottom: 1px solid #d6d5d3; }
 
@@ -533,8 +533,11 @@ body {
   background: linear-gradient(to bottom, #f8f7f6 0%, #f0eeed 100%);
   border: 1px solid #c5c5c5;
   border-radius: 5px;
-  padding: 0 25px 25px;
+  padding: 15px 25px 25px;
   position: relative; }
+
+.no-cssgradients .add-project-wrap {
+  background: #f6f5f4; }
 
 .project-label {
   font-family: "OpenSans";
@@ -623,12 +626,13 @@ body {
   width: 52px;
   height: 38px;
   right: 26px;
-  top: 107px;
+  top: 122px;
   background: -webkit-linear-gradient(top, #ffffff 0%, #fbf9f9 6%, #e9e8e8 100%);
   background: linear-gradient(to bottom, #ffffff 0%, #fbf9f9 6%, #e9e8e8 100%);
   border-radius: 0 5px 5px 0;
   border-left: 1px solid #d6d4d3;
-  box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.35), inset 0px 2px 2px 0px rgba(114, 112, 112, 0.1); }
+  box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.35), inset 0px 2px 2px 0px rgba(114, 112, 112, 0.1);
+  cursor: pointer; }
 
 .add-file-image-cloud {
   background-image: url(../img/iCloud.png);
@@ -637,3 +641,11 @@ body {
   display: block;
   width: 52px;
   height: 38px; }
+
+.close-btn {
+  background-image: url(../img/close.png);
+  width: 14px;
+  height: 14px;
+  display: block;
+  float: right;
+  margin: -8px -18px 0 0; }
