--- a/app/sass/_add-project.scss
+++ b/app/sass/_add-project.scss
@@ -138,3 +138,11 @@
 	margin: -8px -18px 0 0;
 	cursor: pointer;
 }
+.error-mes{
+	color: red;
+	display: none;
+}
+.success-mes{
+	color: green;
+	display: none;
+}
