--- a/app/css/projects.css
+++ b/app/css/projects.css
@@ -653,3 +653,11 @@ body {
   float: right;
   margin: -8px -18px 0 0;
   cursor: pointer; }
+
+.error-mes {
+  color: red;
+  display: none; }
+
+.success-mes {
+  color: green;
+  display: none; }
